my-dropdown-app/src/components/main/antlr/AntimonyGrammarParser.js
// Generated from src/language-handler/antlr/AntimonyGrammar.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from "antlr4ts/atn/ATN"
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer"
import { FailedPredicateException } from "antlr4ts/FailedPredicateException"
import { NoViableAltException } from "antlr4ts/NoViableAltException"
import { Parser } from "antlr4ts/Parser"
import { ParserRuleContext } from "antlr4ts/ParserRuleContext"
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator"
import { RecognitionException } from "antlr4ts/RecognitionException"
import { Token } from "antlr4ts/Token"
import { VocabularyImpl } from "antlr4ts/VocabularyImpl"

import * as Utils from "antlr4ts/misc/Utils"

export class AntimonyGrammarParser extends Parser {
  static T__0 = 1
  static T__1 = 2
  static T__2 = 3
  static T__3 = 4
  static T__4 = 5
  static T__5 = 6
  static T__6 = 7
  static T__7 = 8
  static T__8 = 9
  static T__9 = 10
  static T__10 = 11
  static T__11 = 12
  static T__12 = 13
  static T__13 = 14
  static T__14 = 15
  static T__15 = 16
  static T__16 = 17
  static T__17 = 18
  static T__18 = 19
  static T__19 = 20
  static T__20 = 21
  static T__21 = 22
  static T__22 = 23
  static T__23 = 24
  static T__24 = 25
  static T__25 = 26
  static T__26 = 27
  static T__27 = 28
  static T__28 = 29
  static T__29 = 30
  static T__30 = 31
  static END = 32
  static ARROW = 33
  static INTERACTION_SYMBOL = 34
  static NUMBER = 35
  static BOOLEAN = 36
  static COMPARE = 37
  static LOGICAL = 38
  static SBOTERM = 39
  static AEQ = 40
  static ANNOT_KEYWORD = 41
  static VAR_MODIFIER = 42
  static SUB_MODIFIER = 43
  static TYPE_MODIFIER = 44
  static COMMENT = 45
  static NAME = 46
  static CNAME = 47
  static LETTER = 48
  static WORD = 49
  static LCASE_LETTER = 50
  static UCASE_LETTER = 51
  static DIGIT = 52
  static NEWLINE = 53
  static WS = 54
  static ESCAPED_STRING = 55
  static RULE_root = 0
  static RULE_model = 1
  static RULE_var_name = 2
  static RULE_in_comp = 3
  static RULE_namemaybein = 4
  static RULE_event = 5
  static RULE_event_delay = 6
  static RULE_event_trigger_list = 7
  static RULE_event_trigger = 8
  static RULE_empty = 9
  static RULE_reaction_name = 10
  static RULE_reaction = 11
  static RULE_species_list = 12
  static RULE_species = 13
  static RULE_interaction = 14
  static RULE_event_assignment_list = 15
  static RULE_event_assignment = 16
  static RULE_sboterm = 17
  static RULE_assignment = 18
  static RULE_apostrophe = 19
  static RULE_rate_rule = 20
  static RULE_annotation = 21
  static RULE_annot_list = 22
  static RULE_new_annot = 23
  static RULE_declaration = 24
  static RULE_decl_modifiers = 25
  static RULE_decl_item = 26
  static RULE_decl_assignment = 27
  static RULE_unit = 28
  static RULE_unit_declaration = 29
  static RULE_unit_assignment = 30
  static RULE_mmodel_call = 31
  static RULE_bool_exp = 32
  static RULE_expressions = 33
  static RULE_sum = 34
  static RULE_product = 35
  static RULE_power = 36
  static RULE_atom = 37
  static RULE_func_call = 38
  static RULE_simple_stmt = 39
  static RULE_small_stmt = 40
  static RULE_simple_stmt_list = 41
  static RULE_import_ = 42
  static RULE_modular_model = 43
  static RULE_function = 44
  static RULE_parameters = 45
  static RULE_init_params = 46
  static RULE_variable_in = 47
  static RULE_is_assignment = 48
  // tslint:disable:no-trailing-whitespace
  static ruleNames = [
    "root",
    "model",
    "var_name",
    "in_comp",
    "namemaybein",
    "event",
    "event_delay",
    "event_trigger_list",
    "event_trigger",
    "empty",
    "reaction_name",
    "reaction",
    "species_list",
    "species",
    "interaction",
    "event_assignment_list",
    "event_assignment",
    "sboterm",
    "assignment",
    "apostrophe",
    "rate_rule",
    "annotation",
    "annot_list",
    "new_annot",
    "declaration",
    "decl_modifiers",
    "decl_item",
    "decl_assignment",
    "unit",
    "unit_declaration",
    "unit_assignment",
    "mmodel_call",
    "bool_exp",
    "expressions",
    "sum",
    "product",
    "power",
    "atom",
    "func_call",
    "simple_stmt",
    "small_stmt",
    "simple_stmt_list",
    "import_",
    "modular_model",
    "function",
    "parameters",
    "init_params",
    "variable_in",
    "is_assignment"
  ]

  static _LITERAL_NAMES = [
    undefined,
    "'model'",
    "'module'",
    "'*'",
    "'()'",
    "'$'",
    "'in'",
    "'at'",
    "':'",
    "'after'",
    "','",
    "'t0'",
    "'='",
    "'priority'",
    "'fromTrigger'",
    "'persistent'",
    "';'",
    "'+'",
    "'.sboTerm'",
    "'''",
    "'unit'",
    "'has'",
    "'('",
    "')'",
    "'-'",
    "'/'",
    "'^'",
    "'exp'",
    "'e'",
    "'import'",
    "'function'",
    "'is'",
    "'end'",
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "':='",
    undefined,
    undefined,
    "'substanceOnly'"
  ]
  static _SYMBOLIC_NAMES = [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "END",
    "ARROW",
    "INTERACTION_SYMBOL",
    "NUMBER",
    "BOOLEAN",
    "COMPARE",
    "LOGICAL",
    "SBOTERM",
    "AEQ",
    "ANNOT_KEYWORD",
    "VAR_MODIFIER",
    "SUB_MODIFIER",
    "TYPE_MODIFIER",
    "COMMENT",
    "NAME",
    "CNAME",
    "LETTER",
    "WORD",
    "LCASE_LETTER",
    "UCASE_LETTER",
    "DIGIT",
    "NEWLINE",
    "WS",
    "ESCAPED_STRING"
  ]
  static VOCABULARY = new VocabularyImpl(
    AntimonyGrammarParser._LITERAL_NAMES,
    AntimonyGrammarParser._SYMBOLIC_NAMES,
    []
  )

  // @Override
  // @NotNull
  get vocabulary() {
    return AntimonyGrammarParser.VOCABULARY
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  get grammarFileName() {
    return "AntimonyGrammar.g4"
  }

  // @Override
  get ruleNames() {
    return AntimonyGrammarParser.ruleNames
  }

  // @Override
  get serializedATN() {
    return AntimonyGrammarParser._serializedATN
  }

  createFailedPredicateException(predicate, message) {
    return new FailedPredicateException(this, predicate, message)
  }

  constructor(input) {
    super(input)
    this._interp = new ParserATNSimulator(AntimonyGrammarParser._ATN, this)
  }
  // @RuleVersion(0)
  root() {
    let _localctx = new RootContext(this._ctx, this.state)
    this.enterRule(_localctx, 0, AntimonyGrammarParser.RULE_root)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 104
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (
          ((_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << AntimonyGrammarParser.T__0) |
                (1 << AntimonyGrammarParser.T__1) |
                (1 << AntimonyGrammarParser.T__4) |
                (1 << AntimonyGrammarParser.T__6) |
                (1 << AntimonyGrammarParser.T__15) |
                (1 << AntimonyGrammarParser.T__19) |
                (1 << AntimonyGrammarParser.T__28) |
                (1 << AntimonyGrammarParser.T__29))) !==
              0) ||
          (((_la - 33) & ~0x1f) === 0 &&
            ((1 << (_la - 33)) &
              ((1 << (AntimonyGrammarParser.ARROW - 33)) |
                (1 << (AntimonyGrammarParser.NUMBER - 33)) |
                (1 << (AntimonyGrammarParser.VAR_MODIFIER - 33)) |
                (1 << (AntimonyGrammarParser.SUB_MODIFIER - 33)) |
                (1 << (AntimonyGrammarParser.TYPE_MODIFIER - 33)) |
                (1 << (AntimonyGrammarParser.COMMENT - 33)) |
                (1 << (AntimonyGrammarParser.NAME - 33)) |
                (1 << (AntimonyGrammarParser.NEWLINE - 33)))) !==
              0)
        ) {
          {
            this.state = 102
            this._errHandler.sync(this)
            switch (
              this.interpreter.adaptivePredict(this._input, 0, this._ctx)
            ) {
              case 1:
                {
                  this.state = 98
                  this.simple_stmt()
                }
                break

              case 2:
                {
                  this.state = 99
                  this.model()
                }
                break

              case 3:
                {
                  this.state = 100
                  this.function()
                }
                break

              case 4:
                {
                  this.state = 101
                  this.modular_model()
                }
                break
            }
          }
          this.state = 106
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  model() {
    let _localctx = new ModelContext(this._ctx, this.state)
    this.enterRule(_localctx, 2, AntimonyGrammarParser.RULE_model)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 108
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.NEWLINE) {
          {
            this.state = 107
            this.match(AntimonyGrammarParser.NEWLINE)
          }
        }

        this.state = 111
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.COMMENT) {
          {
            this.state = 110
            this.match(AntimonyGrammarParser.COMMENT)
          }
        }

        this.state = 113
        _la = this._input.LA(1)
        if (
          !(
            _la === AntimonyGrammarParser.T__0 ||
            _la === AntimonyGrammarParser.T__1
          )
        ) {
          this._errHandler.recoverInline(this)
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true
          }

          this._errHandler.reportMatch(this)
          this.consume()
        }
        this.state = 115
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.T__2) {
          {
            this.state = 114
            this.match(AntimonyGrammarParser.T__2)
          }
        }

        this.state = 117
        this.match(AntimonyGrammarParser.NAME)
        this.state = 119
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.T__3) {
          {
            this.state = 118
            this.match(AntimonyGrammarParser.T__3)
          }
        }

        this.state = 121
        this.simple_stmt_list()
        this.state = 122
        this.match(AntimonyGrammarParser.END)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  var_name() {
    let _localctx = new Var_nameContext(this._ctx, this.state)
    this.enterRule(_localctx, 4, AntimonyGrammarParser.RULE_var_name)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 125
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.T__4) {
          {
            this.state = 124
            this.match(AntimonyGrammarParser.T__4)
          }
        }

        this.state = 127
        this.match(AntimonyGrammarParser.NAME)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  in_comp() {
    let _localctx = new In_compContext(this._ctx, this.state)
    this.enterRule(_localctx, 6, AntimonyGrammarParser.RULE_in_comp)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 129
        this.match(AntimonyGrammarParser.T__5)
        this.state = 130
        this.var_name()
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  namemaybein() {
    let _localctx = new NamemaybeinContext(this._ctx, this.state)
    this.enterRule(_localctx, 8, AntimonyGrammarParser.RULE_namemaybein)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 132
        this.var_name()
        this.state = 134
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.T__5) {
          {
            this.state = 133
            this.in_comp()
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  event() {
    let _localctx = new EventContext(this._ctx, this.state)
    this.enterRule(_localctx, 10, AntimonyGrammarParser.RULE_event)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 137
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (
          _la === AntimonyGrammarParser.T__4 ||
          _la === AntimonyGrammarParser.NAME
        ) {
          {
            this.state = 136
            this.reaction_name()
          }
        }

        this.state = 139
        this.match(AntimonyGrammarParser.T__6)
        this.state = 141
        this._errHandler.sync(this)
        switch (this.interpreter.adaptivePredict(this._input, 9, this._ctx)) {
          case 1:
            {
              this.state = 140
              this.event_delay()
            }
            break
        }
        this.state = 143
        this.bool_exp()
        this.state = 145
        this._errHandler.sync(this)
        switch (this.interpreter.adaptivePredict(this._input, 10, this._ctx)) {
          case 1:
            {
              this.state = 144
              this.event_trigger_list()
            }
            break
        }
        this.state = 147
        this.match(AntimonyGrammarParser.T__7)
        this.state = 148
        this.event_assignment_list()
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  event_delay() {
    let _localctx = new Event_delayContext(this._ctx, this.state)
    this.enterRule(_localctx, 12, AntimonyGrammarParser.RULE_event_delay)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 150
        this.bool_exp()
        this.state = 151
        this.match(AntimonyGrammarParser.T__8)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  event_trigger_list() {
    let _localctx = new Event_trigger_listContext(this._ctx, this.state)
    this.enterRule(_localctx, 14, AntimonyGrammarParser.RULE_event_trigger_list)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 157
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === AntimonyGrammarParser.T__9) {
          {
            {
              this.state = 153
              this.match(AntimonyGrammarParser.T__9)
              this.state = 154
              this.event_trigger()
            }
          }
          this.state = 159
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  event_trigger() {
    let _localctx = new Event_triggerContext(this._ctx, this.state)
    this.enterRule(_localctx, 16, AntimonyGrammarParser.RULE_event_trigger)
    try {
      this.state = 172
      this._errHandler.sync(this)
      switch (this._input.LA(1)) {
        case AntimonyGrammarParser.T__10:
          this.enterOuterAlt(_localctx, 1)
          {
            this.state = 160
            this.match(AntimonyGrammarParser.T__10)
            this.state = 161
            this.match(AntimonyGrammarParser.T__11)
            this.state = 162
            this.match(AntimonyGrammarParser.BOOLEAN)
          }
          break
        case AntimonyGrammarParser.T__12:
          this.enterOuterAlt(_localctx, 2)
          {
            this.state = 163
            this.match(AntimonyGrammarParser.T__12)
            this.state = 164
            this.match(AntimonyGrammarParser.T__11)
            this.state = 165
            this.sum(0)
          }
          break
        case AntimonyGrammarParser.T__13:
          this.enterOuterAlt(_localctx, 3)
          {
            this.state = 166
            this.match(AntimonyGrammarParser.T__13)
            this.state = 167
            this.match(AntimonyGrammarParser.T__11)
            this.state = 168
            this.match(AntimonyGrammarParser.BOOLEAN)
          }
          break
        case AntimonyGrammarParser.T__14:
          this.enterOuterAlt(_localctx, 4)
          {
            this.state = 169
            this.match(AntimonyGrammarParser.T__14)
            this.state = 170
            this.match(AntimonyGrammarParser.T__11)
            this.state = 171
            this.match(AntimonyGrammarParser.BOOLEAN)
          }
          break
        default:
          throw new NoViableAltException(this)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  empty() {
    let _localctx = new EmptyContext(this._ctx, this.state)
    this.enterRule(_localctx, 18, AntimonyGrammarParser.RULE_empty)
    try {
      this.enterOuterAlt(_localctx, 1)
      // tslint:disable-next-line:no-empty
      {
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  reaction_name() {
    let _localctx = new Reaction_nameContext(this._ctx, this.state)
    this.enterRule(_localctx, 20, AntimonyGrammarParser.RULE_reaction_name)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 176
        this.namemaybein()
        this.state = 177
        this.match(AntimonyGrammarParser.T__7)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  reaction() {
    let _localctx = new ReactionContext(this._ctx, this.state)
    this.enterRule(_localctx, 22, AntimonyGrammarParser.RULE_reaction)
    let _la
    try {
      this.state = 209
      this._errHandler.sync(this)
      switch (this.interpreter.adaptivePredict(this._input, 21, this._ctx)) {
        case 1:
          this.enterOuterAlt(_localctx, 1)
          {
            this.state = 180
            this._errHandler.sync(this)
            switch (
              this.interpreter.adaptivePredict(this._input, 13, this._ctx)
            ) {
              case 1:
                {
                  this.state = 179
                  this.reaction_name()
                }
                break
            }
            this.state = 182
            this.species_list()
            this.state = 183
            this.match(AntimonyGrammarParser.ARROW)
            this.state = 185
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            if (
              _la === AntimonyGrammarParser.T__4 ||
              _la === AntimonyGrammarParser.NUMBER ||
              _la === AntimonyGrammarParser.NAME
            ) {
              {
                this.state = 184
                this.species_list()
              }
            }

            this.state = 187
            this.match(AntimonyGrammarParser.T__15)
            this.state = 189
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            if (
              ((_la & ~0x1f) === 0 &&
                ((1 << _la) &
                  ((1 << AntimonyGrammarParser.T__4) |
                    (1 << AntimonyGrammarParser.T__16) |
                    (1 << AntimonyGrammarParser.T__21) |
                    (1 << AntimonyGrammarParser.T__23) |
                    (1 << AntimonyGrammarParser.T__26))) !==
                  0) ||
              _la === AntimonyGrammarParser.NUMBER ||
              _la === AntimonyGrammarParser.NAME
            ) {
              {
                this.state = 188
                this.sum(0)
              }
            }

            this.state = 192
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            if (_la === AntimonyGrammarParser.T__5) {
              {
                this.state = 191
                this.in_comp()
              }
            }
          }
          break

        case 2:
          this.enterOuterAlt(_localctx, 2)
          {
            this.state = 195
            this._errHandler.sync(this)
            switch (
              this.interpreter.adaptivePredict(this._input, 17, this._ctx)
            ) {
              case 1:
                {
                  this.state = 194
                  this.reaction_name()
                }
                break
            }
            this.state = 198
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            if (
              _la === AntimonyGrammarParser.T__4 ||
              _la === AntimonyGrammarParser.NUMBER ||
              _la === AntimonyGrammarParser.NAME
            ) {
              {
                this.state = 197
                this.species_list()
              }
            }

            this.state = 200
            this.match(AntimonyGrammarParser.ARROW)
            this.state = 201
            this.species_list()
            this.state = 202
            this.match(AntimonyGrammarParser.T__15)
            this.state = 204
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            if (
              ((_la & ~0x1f) === 0 &&
                ((1 << _la) &
                  ((1 << AntimonyGrammarParser.T__4) |
                    (1 << AntimonyGrammarParser.T__16) |
                    (1 << AntimonyGrammarParser.T__21) |
                    (1 << AntimonyGrammarParser.T__23) |
                    (1 << AntimonyGrammarParser.T__26))) !==
                  0) ||
              _la === AntimonyGrammarParser.NUMBER ||
              _la === AntimonyGrammarParser.NAME
            ) {
              {
                this.state = 203
                this.sum(0)
              }
            }

            this.state = 207
            this._errHandler.sync(this)
            _la = this._input.LA(1)
            if (_la === AntimonyGrammarParser.T__5) {
              {
                this.state = 206
                this.in_comp()
              }
            }
          }
          break
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  species_list() {
    let _localctx = new Species_listContext(this._ctx, this.state)
    this.enterRule(_localctx, 24, AntimonyGrammarParser.RULE_species_list)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 211
        this.species()
        this.state = 216
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        while (_la === AntimonyGrammarParser.T__16) {
          {
            {
              this.state = 212
              this.match(AntimonyGrammarParser.T__16)
              this.state = 213
              this.species()
            }
          }
          this.state = 218
          this._errHandler.sync(this)
          _la = this._input.LA(1)
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  species() {
    let _localctx = new SpeciesContext(this._ctx, this.state)
    this.enterRule(_localctx, 26, AntimonyGrammarParser.RULE_species)
    let _la
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 220
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.NUMBER) {
          {
            this.state = 219
            this.match(AntimonyGrammarParser.NUMBER)
          }
        }

        this.state = 223
        this._errHandler.sync(this)
        _la = this._input.LA(1)
        if (_la === AntimonyGrammarParser.T__4) {
          {
            this.state = 222
            this.match(AntimonyGrammarParser.T__4)
          }
        }
